fix z-index

--- a/_modulo_Start_in_seconds.scss
+++ b/_modulo_Start_in_seconds.scss
@@ -171,6 +171,7 @@
     .box-img-animated-2 {
         position: relative;
         max-height: 256px;
+        z-index: 999;
 
         .img-down-2 {
             height: 100%;
